// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Logo component applies custom className 1`] = `
<div>
  <h1
    class="text-lg font-acme text-white-500 text-red-500"
  >
    Travelsy
  </h1>
</div>
`;

exports[`Logo component renders with custom text 1`] = `
<div>
  <h1
    class="text-lg font-acme text-white-500 "
  >
    MyLogo
  </h1>
</div>
`;

exports[`Logo component should render correctly 1`] = `
<div>
  <h1
    class="text-lg font-acme text-white-500 "
  >
    Travelsy
  </h1>
</div>
`;
